--- a/apps.json
+++ b/apps.json
@@ -3,8 +3,8 @@
     "id": "StructAssist",
     "name": "STRUCT Assist",
     "repo": "Aditya-1904/struct-assist-app",
-    "latestVersion": "1.0.0",
-    "downloadUrl": "https://github.com/Aditya-1904/struct-assist-app/releases/download/1.0.0/struct-assist-app.zip"
+    "latestVersion": "1.0.6",
+    "downloadUrl": "https://github.com/Aditya-1904/cad-assist-app/releases/download/v1.0.6/v1.0.6.zip"
   },
   {
     "id": "CADAssist",
