--- a/apps.json
+++ b/apps.json
@@ -3,7 +3,7 @@
     "id": "StructAssist",
     "name": "STRUCT Assist",
     "repo": "Aditya-1904/struct-assist-app",
-    "latestVersion": "main"
+    "latestVersion": "v1.0.1"
   },
   {
     "id": "CADAssist",
