--- a/apps.json
+++ b/apps.json
@@ -12,8 +12,8 @@
     "name":          "CAD Assist",
     "repo":          "Aditya-1904/cad-assist-app",
     "branch":        "main",
-    "latestVersion": "1.0.2",
-    "releaseNotes":  "• Initial CAD tooling support"
+    "latestVersion": "1.0.3",
+    "releaseNotes":  "•some new functionality"
   },
   {
     "id":            "PROJECTAssist",
