--- a/apps.json
+++ b/apps.json
@@ -20,7 +20,7 @@
     "name":          "PROJECT Assist",
     "repo":          "Aditya-1904/project-assist-app",
     "branch":        "main",
-    "latestVersion": "1.0.2",
-    "releaseNotes":  "• Initial outlook tooling support"
+    "latestVersion": "1.0.3",
+    "releaseNotes":  "• some more new changes Initial outlook tooling support"
   }
 ]
